--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -6,13 +6,13 @@
 
 <div class="row justify-content-center my-3">
   <div class="col-5">
-    <img src="{% static 'portfolio/test.jpg' %}" class="img-fluid">
+    <img src="{% static 'portfolio/new.jpg' %}" class="img-fluid">
   </div>
 </div>
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">Shane D'Souza is Commander-in-Chief at ReddCode and lives in Pakistan. 😊</h1>
+    <h1 id="hometext" class="font-weight-bold">Shane D'Souza is Commander-in-Chief of this website and lives in Pakistan. 😊</h1>
   </div>
 </div>
 
